[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/paddle.gd" type="Script" id=1]
[ext_resource path="res://assets/paddle.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0001
height = 66.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 68.0

[node name="Paddle" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Back" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back"]
position = Vector2( -5, 0 )
shape = SubResource( 2 )

[node name="SafeTimer" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]

[node name="DashResetTimer" type="Timer" parent="."]
